# Deadliner

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: Build.yml  CI.yml  Publish.yml  Release.yml  Tests.yml
background-job/: Cargo.toml
background-job/src/: lib.rs  main.rs  register_auto_launch.rs  system_tray.rs
crates/background-job/: Cargo.toml
crates/background-job/src/: main.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: deadliner.rs  design_system.rs  lib.rs  main.rs  update_wallpaper.rs
crates/gui/src/components/: header.rs
gui/: Cargo.toml  build.rs
gui/src/: deadliner.rs  lib.rs  main.rs  short_hash.rs  update_wallpaper.rs
gui/src/components/: button.rs  section.rs
schedular/: Cargo.toml  build.rs
schedular/src/: lib.rs  macros.rs  main.rs  notify.rs  register_auto_launch.rs  server.rs  startup_launch.rs  system_tray.rs
src/: deadliner.rs  design_system.rs  lib.rs  main.rs  paint_utils.rs  short_hash.rs  update_wallpaper.rs  utils.rs
src/components/: footer.rs  header.rs  input.rs  line.rs  mod.rs  section.rs
website/: .prettierrc  package.json  tailwind.config.js
website/components/: Footer.tsx  Link.tsx  Nav.tsx  Section.tsx  Separator.tsx  Title.tsx
website/pages/: Downloads.tsx  Features.tsx  Gallery.tsx  Hero.tsx  Motivation.tsx  _document.tsx  index.tsx
website/styles/: globals.css
zipper/: index.ts  package.json  pnpm-lock.yaml
