[package]
name = "deadliner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper = { version = "3", features = ["from_url"] }
image = "0.24.1"
text-to-png = "0.2.0"
dirs = "4.0.0"
eframe = "0.17.0" # Gives us egui, epi and web+native backends
systray = "0.4.0"
chrono = "0.4.19"