[package]
name = "deadliner-schedular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadliner_gui = { path = "../gui" }
serde_json = "1.0"
auto-launch = "0.2.0"
chrono = "0.4.19"
wallpaper = { version = "3", features = ["from_url"] }
image = "0.23.14"
imageproc = "0.22.0"
text-to-png = "0.2.0"
tokio-cron-scheduler = "0.5.0"
tokio = { version = "1.17.0", features = ["full"] }
tao = { version = "0.6.4", features = ["tray"] }
notify-rust = "4"

[[bin]]
name = "deadliner-schedular"
path = "src/main.rs"
