[package]
name = "deadliner_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallpaper = { version = "3", features = ["from_url"] }
image = "0.23.14"
imageproc = "0.22.0"
text-to-png = "0.2.0"
dirs = "4.0.0"
eframe = "0.17.0" # Gives us egui, epi and web+native backends
chrono = "0.4.19"
strum = "0.17.1"
strum_macros = "0.17.1"
rfd = "0.8.1"
reqwest = "0.11.10"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winit = "0.26.1"

[[bin]]
name = "deadliner"
path = "src/main.rs"
